src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-color: #1f2937;
  --background-color: #e5e7eb;
  --background-color-opa: #e5e7ebcc;
  --glow-color: #6ee7b7;
  --highlight-text: #10b981;
  --button: #6ee7b7;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-color: #fff;
    --background-color: #000;
    --background-color-opa: #000000cc;
    --glow-color: #14532d;
    --highlight-text: #059669;
    --button: #34d399;
  }
}

body {
  color: var(--foreground-color);
  background: var(--background-color);
  display: flex;
  flex-direction: column;
  margin: 0;
  height: 100vh;
  font-family: 'Courier New', Courier, monospace;
}

@media (max-width: 1440px) {
  .glowing-txt {
    font-size: 20px;
  }
}

@media (max-width: 1024px) {
  .glowing-txt {
    font-size: 16px;
  }
}

@media (max-width: 768px) {
  .glowing-txt {
    font-size: 1rem;
    letter-spacing: 6px;
  }
}

@media (max-width: 576px) {}

.unclickable {
  -moz-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  pointer-events: none;
}

